# sophiaAI

./: .env.example  .gitignore  README.md  answer_quality_evaluation.md  install.bat  install.command  prompt_improvement_comparison.md  pyproject.toml  start-sophiaai.bat  start-sophiaai.command  test_questions.md
.taskmaster/docs/: implementation_record.md  prd.txt
data/eval/: benchmark_queries.json  eval_report.json  parser_test_results.json
evaluation/: evaluate.py  queries.json
scripts/: collect.py  collect_all.py  collect_educational.py  evaluate_search.py  export_birads_html.py  extract_birads_mammography.py  index.py  index_birads.py  index_birads_mammography.py  process.py  run_ui.py  search.py  test_llm_parser.py  test_questions.py  test_translator.py
src/: models.py
src/api/: schemas.py  server.py
src/collection/: collector.py  educational_collector.py  enricher.py  koreamed_client.py  multi_source_collector.py  pubmed_client.py  rsna_scraper.py  semantic_scholar_client.py
src/evaluation/: agent_judge.py
src/indexing/: chunker.py  database.py  embedder.py  indexer.py
src/knowledge/: __init__.py  core_physics.py  manager.py
src/processing/: classifier.py  cleaner.py  pipeline.py
src/prompts/: __init__.py  unified_builder.py
src/reasoning/: evidence_mapper.py  mammo_physics_solver.py  math_verifier.py  orchestrator.py  physics_cot_rag.py  physics_triage.py  planner.py  reflective_engine.py  synthesizer.py  text_logic.py
tests/: conftest.py  test_50_questions.py  test_processing.py  test_search.py  test_system_integration.py
(+67 files in other folders)
